added some issues

--- a/flower.html
+++ b/flower.html
@@ -4,12 +4,151 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flower Market</title>
+    <!-- font awesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="flower.css" />
   </head>
   <body>
-    <head> </head>
+    <head>
+      <ul class="navbar">
+        <div calss="logo-section">
+          <li><img src="assets/logo.png" alt="" /></li>
+        </div>
+        <div class="menu-section">
+          <li>Home</li>
+          <li>Shop</li>
+          <li>About Us</li>
+          <li>
+            <img src="" alt="" /><i class="fa-solid fa-cart-shopping"></i>
+          </li>
+        </div>
+      </ul>
+    </head>
 
-    <main></main>
+    <main>
+      <div class="banner-section">
+        <div class="banner-title">
+          <h1>
+            ALWAYS <span class="title">FRESH <br />FLOWERS </span>
+          </h1>
+          <p class="banner-para">
+            Indulge your senses with the beauty and fragrance of <br />
+            our fresh flower shop. From classic roses to exotic <br />
+            blooms, we offer a wide variety of fresh flowers that <br />
+            are perfect for any occasion.
+          </p>
+        </div>
+
+        <div class="bannner-image">
+          <img src="assets/hero-flower.png" alt="" />
+        </div>
+      </div>
+
+      <!-- plant-section -->
+      <div class="plant-secion">
+        <div class="plant-title">
+          <h1>Our Plants</h1>
+          <p>
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. <br />From classic roses to exotic blooms, we offer a
+            wide variety of fresh.
+          </p>
+        </div>
+
+        <div class="card-rows">
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plant-card">
+            <img src="assets/sample-flower-image.png" alt="" />
+            <h6>Lily Blosson</h6>
+            <h5>20 USD</h5>
+            <button>ADD TO CART</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- this is deal section -->
+
+      <div class="deal-upper">
+        <h1 class="deal-title">Latest Deal</h1>
+      </div>
+      <div class="deal-image">
+        <div class="col-one">
+          <img src="" alt="" />
+        </div>
+      </div>
+    </main>
 
     <footer></footer>
   </body>
