added more codes

--- a/flower.html
+++ b/flower.html
@@ -19,12 +19,14 @@
     <head>
       <ul class="navbar">
         <div calss="logo-section">
-          <li><img src="assets/logo.png" alt="" /></li>
+          <li>
+            <img hieght="45px" width="85px" src="assets/logo.png" alt="" />
+          </li>
         </div>
         <div class="menu-section">
-          <li>Home</li>
-          <li>Shop</li>
-          <li>About Us</li>
+          <li class="hide-on-small-device">Home</li>
+          <li class="hide-on-small-device">Shop</li>
+          <li class="hide-on-small-device">About Us</li>
           <li>
             <img src="" alt="" /><i class="fa-solid fa-cart-shopping"></i>
           </li>
@@ -54,7 +56,7 @@
       <!-- plant-section -->
       <div class="plant-secion">
         <div class="plant-title">
-          <h1>Our Plants</h1>
+          <h1 class="plant-headline">Our Plants</h1>
           <p>
             Indulge your senses with the beauty and fragrance of our fresh
             flower shop. <br />From classic roses to exotic blooms, we offer a
@@ -135,6 +137,34 @@
             <h5>20 USD</h5>
             <button>ADD TO CART</button>
           </div>
+        </div>
+      </div>
+
+      <!-- flower and plants lover section -->
+      <div class="plants-lover-section">
+        <div class="plant-image">
+          <img src="assets/flower-store.png" alt="" />
+        </div>
+        <div class="plant-description">
+          <h1 class="plant-title">Flower & Plants Lover</h1>
+          <p class="plant-description">
+            .Indulge your senses with the beauty and <br />
+            fragrance of our fresh flower shop. From classic <br />
+            roses to exotic blooms, we offer a wide variety <br />
+            of fresh.
+          </p>
+          <p class="plant-description">
+            .Indulge your senses with the beauty and <br />
+            fragrance of our fresh flower shop. From classic <br />
+            roses to exotic blooms, we offer a wide variety <br />
+            of fresh.
+          </p>
+          <p class="plant-description">
+            .Indulge your senses with the beauty and <br />
+            fragrance of our fresh flower shop. From classic <br />
+            roses to exotic blooms, we offer a wide variety <br />
+            of fresh.
+          </p>
         </div>
       </div>
 
