added some elements

--- a/flower.html
+++ b/flower.html
@@ -40,6 +40,7 @@
           <h1>
             ALWAYS <span class="title">FRESH <br />FLOWERS </span>
           </h1>
+          <br />
           <p class="banner-para">
             Indulge your senses with the beauty and fragrance of <br />
             our fresh flower shop. From classic roses to exotic <br />
@@ -54,89 +55,65 @@
       </div>
 
       <!-- plant-section -->
-      <div class="plant-secion">
-        <div class="plant-title">
-          <h1 class="plant-headline">Our Plants</h1>
+      <div class="our-plant-section">
+        <div class="our-plant">
+          <h1>Our Plant</h1>
           <p>
             Indulge your senses with the beauty and fragrance of our fresh
             flower shop. <br />From classic roses to exotic blooms, we offer a
             wide variety of fresh.
           </p>
         </div>
-
         <div class="card-rows">
           <div class="plant-card">
             <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
+            <h5>Lily Blosson</h6>
+            <h4>20 USD</h5>
             <button>ADD TO CART</button>
           </div>
           <div class="plant-card">
             <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
+            <h5>Lily Blosson</h6>
+            <h4>20 USD</h5>
             <button>ADD TO CART</button>
           </div>
           <div class="plant-card">
             <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
+            <h5>Lily Blosson</h6>
+            <h4>20 USD</h5>
             <button>ADD TO CART</button>
           </div>
           <div class="plant-card">
             <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
+            <h5>Lily Blosson</h6>
+            <h4>20 USD</h5>
             <button>ADD TO CART</button>
           </div>
           <div class="plant-card">
             <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
+            <h5>Lily Blosson</h6>
+            <h4>20 USD</h5>
             <button>ADD TO CART</button>
           </div>
           <div class="plant-card">
             <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
+            <h5>Lily Blosson</h6>
+            <h4>20 USD</h5>
             <button>ADD TO CART</button>
           </div>
           <div class="plant-card">
             <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
+            <h5>Lily Blosson</h6>
+            <h4>20 USD</h5>
             <button>ADD TO CART</button>
-          </div>
+          </div>          
           <div class="plant-card">
             <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
+            <h5>Lily Blosson</h6>
+            <h4>20 USD</h5>
             <button>ADD TO CART</button>
           </div>
-          <div class="plant-card">
-            <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
-            <button>ADD TO CART</button>
-          </div>
-          <div class="plant-card">
-            <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
-            <button>ADD TO CART</button>
-          </div>
-          <div class="plant-card">
-            <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
-            <button>ADD TO CART</button>
-          </div>
-          <div class="plant-card">
-            <img src="assets/sample-flower-image.png" alt="" />
-            <h6>Lily Blosson</h6>
-            <h5>20 USD</h5>
-            <button>ADD TO CART</button>
-          </div>
+        </div>
         </div>
       </div>
 
@@ -148,19 +125,19 @@
         <div class="plant-description">
           <h1 class="plant-title">Flower & Plants Lover</h1>
           <p class="plant-description">
-            .Indulge your senses with the beauty and <br />
+            *Indulge your senses with the beauty and <br />
             fragrance of our fresh flower shop. From classic <br />
             roses to exotic blooms, we offer a wide variety <br />
             of fresh.
           </p>
           <p class="plant-description">
-            .Indulge your senses with the beauty and <br />
+            *Indulge your senses with the beauty and <br />
             fragrance of our fresh flower shop. From classic <br />
             roses to exotic blooms, we offer a wide variety <br />
             of fresh.
           </p>
           <p class="plant-description">
-            .Indulge your senses with the beauty and <br />
+            *Indulge your senses with the beauty and <br />
             fragrance of our fresh flower shop. From classic <br />
             roses to exotic blooms, we offer a wide variety <br />
             of fresh.
@@ -168,7 +145,7 @@
         </div>
       </div>
 
-      <!-- this is deal section -->
+      <!-- this is the latest deal section -->
 
       <div class="latest-deal-section">
         <div class="deal-upper">
