changed some elements

--- a/flower.html
+++ b/flower.html
@@ -20,7 +20,7 @@
       <ul class="navbar">
         <div calss="logo-section">
           <li>
-            <img hieght="45px" width="85px" src="assets/logo.png" alt="" />
+            <img height="45px" width="85px" src="assets/logo.png" alt="" />
           </li>
         </div>
         <div class="menu-section">
@@ -49,7 +49,7 @@
           </p>
         </div>
 
-        <div class="bannner-image">
+        <div class="banner-image">
           <img src="assets/hero-flower.png" alt="" />
         </div>
       </div>
@@ -130,13 +130,13 @@
             roses to exotic blooms, we offer a wide variety <br />
             of fresh.
           </p>
-          <p class="plant-description">
+          <p class="plant-description hide-on-small-device">
             *Indulge your senses with the beauty and <br />
             fragrance of our fresh flower shop. From classic <br />
             roses to exotic blooms, we offer a wide variety <br />
             of fresh.
           </p>
-          <p class="plant-description">
+          <p class="plant-description hide-on-small-device">
             *Indulge your senses with the beauty and <br />
             fragrance of our fresh flower shop. From classic <br />
             roses to exotic blooms, we offer a wide variety <br />
@@ -159,7 +159,7 @@
         <div class="deal-image">
           <div class="col-one">
             <img src="assets/deal-ana.png" alt="" /><br />
-            <br />
+                        <br />
             <img src="assets/deal-bloom.png" alt="" />
           </div>
           <div class="col-two">
